--- a/css/style.css
+++ b/css/style.css
@@ -126,9 +126,121 @@ header {
     width: 100%;
 }
 /* blog end */
-/* contact start */
-.contact {
-    min-height: 300px;
+/* newsletter start */
+.newsletter {
+    padding: 70px 0;
     background-color: #EFEFEF;
 }
-/* contact end */
+.signup {
+    text-align: center;
+}
+.s_h1 {
+    margin-top: 0;
+    margin-bottom: 70px;
+    font-size: 30px;
+    font-weight: 700;
+}
+.s_form {
+    width: 400px;
+    margin: 0 auto;
+    position: relative;
+}
+.s_form input {
+    font-family: 'Playfair Display', serif;;
+    font-size: 16px;
+    width: 345px;
+    height: 45px;
+    padding-left: 5px;
+    padding-right: 55px;
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid #000000;
+}
+.s_form button {
+    border: none;
+    top: 15px;
+    right: 0;
+    position: absolute;
+    background-color: transparent;
+    cursor: pointer;
+}
+.s_form button img {
+    max-width: 100%;
+}
+/* newsletter end */
+/* blog 2nd part start */
+.loadmore {
+    width: 15%;
+    margin: 150px auto 60px;
+}
+.loadmore button {
+    font-family: 'Playfair Display', serif;;
+    font-size: 20px;
+    padding: 15px;
+    border: 1px solid #626262;
+    background-color: transparent;
+    transition: .3s;
+    cursor: pointer;
+}
+.loadmore button:hover {
+    background-color: #000000;
+    color: white;
+}
+/* blog 2nd part end */
+/* footer start */
+.footer {
+    padding: 20px 0;
+    background-color: #EFEFEF;
+}
+.terms {
+
+}
+.terms ul {
+    float: left;
+}
+.terms ul li {
+    list-style: none;
+    float: left;
+}
+.terms ul li a {
+    font-family: 'Playfair Display', serif;
+    color: #626262;
+    padding: 0 10px;
+    text-decoration: none;
+    display: inline-block;
+    transition: .3s;
+}
+.terms ul li a:hover {
+    border-bottom: 1px solid black;
+}
+.terms ul li:first-child a {
+    padding-left: 0;
+}
+.social {
+
+}
+.social ul {
+ float: right;
+}
+.social ul li {
+    list-style: none;
+    float: left;
+}
+.social ul li a {
+    font-family: 'Playfair Display', serif;
+    color: #626262;
+    padding: 0 10px;
+    text-decoration: none;
+    display: inline-block;
+    transition: .3s;
+}
+.social ul li a:hover {
+    border-bottom: 1px solid black;
+}
+.social ul li:last-child a {
+    margin-right: 0;
+} 
+.social ul li a img {
+
+}
+/* footer end */
